[package]
name = "webb-relayer-handlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-tx-relay = { path = "../tx-relay" }
webb-relayer-handler-utils = { path = "../relayer-handler-utils" }
webb-relayer-store = { path = "../relayer-store" }
webb-relayer-config = { path = "../relayer-config" }
webb-relayer-context = { path = "../relayer-context" }
webb-relayer-utils = { path = "../relayer-utils" }
tracing = { version = "^0.1", features = ["log"] }
sled = { version = "^0.34" }
futures = { version = "^0.3", default-features = false }
serde = { version = "^1", default-features = false, features = ["derive"] }
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0.1" }
warp = { version = "0.3.3", default-features = false, features = ["websocket", "tls"] }
serde_json = { version = "^1", default-features = false }
webb = { version = "0.5.11", default-features = false }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { version = "^0.2", features = ["vendored"], optional = true }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale"] }
ethereum-types = "0.13.1"
