[package]
name = "webb-relayer-handlers"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-tx-relay = { path = "../tx-relay" }
webb-relayer-handler-utils = { path = "../relayer-handler-utils" }
webb-relayer-store = { path = "../relayer-store" }
webb-relayer-config = { path = "../relayer-config" }
webb-relayer-context = { path = "../relayer-context" }
webb-relayer-utils = { path = "../relayer-utils" }

tracing = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
webb = { workspace = true }
subxt-signer = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true }
webb-proposals = { workspace = true }
ethereum-types = { workspace = true }
axum = { workspace = true }

axum-client-ip = "0.4.0"
tokio-stream = { version = "^0.1" }

[build-dependencies]
build-data = "0.1.4"
