[package]
name = "webb-relayer-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-utils = { path = "../relayer-utils" }
parking_lot = "^0.12"
tracing = { version = "^0.1", features = ["log"] }
sled = { version = "^0.34" }
serde = { version = "^1", default-features = false, features = ["derive"] }
serde_json = { version = "^1", default-features = false }
hex = { version = "0.4", default-features = false }
webb = { version = "0.5.14", default-features = false }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { version = "^0.2", features = ["vendored"], optional = true }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale"] }
tempfile = "^3.3"
