[package]
name = "webb-relayer-store"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-utils = { workspace = true }

tracing = { workspace = true }
sled = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }
webb-proposals = { workspace = true }
tempfile = { workspace = true }

parking_lot = { workspace = true }

[features]
default = ["std", "sled"]
std = []
sled = ["dep:sled"]
