[package]
name = "webb-relayer-types"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-utils = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true }
ethereum-types = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros","ws-client"]}
http = "0.2.9"
subxt-signer = { workspace = true }
tiny-bip39 = "1.0.0"
