[package]
name = "webb-relayer-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
serde_path_to_error = "0.1.5"
thiserror = "^1"
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale"] }
webb = { version = "0.5.7", default-features = false }
# Used by ethers (but we need it to be vendored with the lib).
openssl = { version = "0.10", features = ["vendored"], optional = true }
glob = "^0.3"
config = { version = "0.11", default-features = false, features = ["toml", "json"] }
sled = { version = "^0.34" }
libsecp256k1 = "0.7.0"
warp = { version = "0.3.3", default-features = false, features = ["websocket", "tls"] }
url = { version = "^2.2", features = ["serde"] }
serde_json = { version = "^1", default-features = false }
derive_more = { version = "0.99", default-features = false, features = ["display"] }
prometheus = "0.13.2"

[features]
default = ["evm-runtime", "substrate-runtime"]
evm-runtime = ["webb/evm-runtime", "webb-proposals/evm"]
substrate-runtime = ["webb/substrate-runtime", "webb-proposals/substrate"]