[package]
name = "webb-relayer-utils"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { workspace = true }

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
backoff = { workspace = true }
serde_path_to_error = { workspace = true }
webb-proposals = { workspace = true }
webb = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }
glob = { workspace = true }
sled = { workspace = true }
libsecp256k1 = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
reqwest = { workspace = true }
ark-std = { version = "^0.3.0", default-features = false }
derive_more = { version = "0.99", default-features = false, features = ["display"] }
prometheus = { version = "0.13.0", default-features = false }
hyper = "0.14.24"
tangle-subxt = { workspace = true }
jsonrpsee = { workspace = true }

[features]
default = ["evm-runtime", "substrate-runtime"]
evm-runtime = ["webb/evm-runtime", "webb-proposals/evm"]
substrate-runtime = ["webb/substrate-runtime", "webb-proposals/substrate"]
