[package]
name = "webb-relayer-tx-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-types = { path = "../relayer-types" }
webb-relayer-store = { path = "../relayer-store" }
webb-relayer-context = { path = "../relayer-context"}
webb-relayer-utils = { path = "../relayer-utils"}
tracing = { version = "^0.1", features = ["log"] }
sled = { version = "^0.34" }
futures = { version = "^0.3", default-features = false }
backoff = { version = "0.4.0", features = ["tokio"] }
tokio = { version = "^1", features = ["full"] }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
webb = { version = "0.5.11", default-features = false }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { version = "^0.2", features = ["vendored"], optional = true }
ethereum-types = "0.14"

[features]
default = ["std", "evm", "substrate"]
std = []
evm = [
    "webb-relayer-context/evm",
]
substrate = [
    "webb-relayer-context/substrate",
]