[package]
name = "webb-relayer-tx-queue"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-types = { workspace = true }
webb-relayer-store = { workspace = true }
webb-relayer-context = { workspace = true }
webb-relayer-utils = { workspace = true }

tracing = { workspace = true }
sled = { workspace = true }
futures = { workspace = true }
backoff = { workspace = true }
tokio = { workspace = true }
webb = { workspace = true }
sp-core = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }
ethereum-types = { workspace = true }

rand = { workspace = true, default-features = false, features = ["getrandom"] }


[features]
default = ["std", "evm", "substrate"]
std = []
evm = ["webb-relayer-context/evm"]
substrate = ["webb-relayer-context/substrate", "sp-core", "sp-runtime"]

[dev-dependencies]
webb-relayer-config = { workspace = true }
url = { workspace = true }
tracing-subscriber = { workspace = true }
