[package]
name = "webb-relayer-tx-relay-utils"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
webb-relayer-context = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }

[features]
default = ["std", "evm" ]
std = []
evm = ["webb-relayer-context/evm"]
# substrate = ["webb-relayer-context/substrate"]
