[package]
name = "webb-relayer-tx-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-handler-utils = { path = "../relayer-handler-utils" }
webb-relayer-config = { path = "../relayer-config"}
webb-relayer-context = { path = "../relayer-context"}
webb-relayer-utils = { path = "../relayer-utils"}
tracing = { version = "^0.1", features = ["log"] }
futures = { version = "^0.3", default-features = false }
tokio = { version = "^1", features = ["full"] }
webb = { version = "0.5.14", default-features = false }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { version = "^0.2", features = ["vendored"], optional = true }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale"] }
ethereum-types = "0.13.1"
once_cell = "1.17.0"
chrono = {version = "0.4.23", features = ["serde"] }
serde = { version = "^1", default-features = false, features = ["derive"] }

[features]
default = ["std", "evm", "substrate"]
std = []
evm = [
    "webb-relayer-context/evm",
]
substrate = [
    "webb-relayer-context/substrate",
]