[package]
name = "webb-relayer-tx-relay"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-handler-utils = { workspace = true }
webb-relayer-config = { workspace = true }
webb-relayer-context = { workspace = true }
webb-relayer-utils = { workspace = true }

tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }
webb-proposals = { workspace = true }
ethereum-types = { workspace = true }
serde = { workspace = true }

once_cell = "1.17.0"
chrono = {version = "0.4.23", features = ["serde"] }

[features]
default = ["std", "evm", "substrate"]
std = []
evm = [
    "webb-relayer-context/evm",
]
substrate = [
    "webb-relayer-context/substrate",
]
