[package]
name = "webb-ew-dkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-event-watcher-traits = { path = "../../crates/event-watcher-traits" }
webb-relayer-store = { path = "../../crates/relayer-store" }
webb-relayer-config = { path = "../../crates/relayer-config"}
webb-relayer-utils = { path = "../../crates/relayer-utils"}
async-trait = "^0.1"
tracing = { version = "^0.1", features = ["log"] }
sled = { version = "^0.34" }
tokio = { version = "^1", features = ["full"] }
hex = { version = "0.4", default-features = false }
webb = { version = "0.5.14", default-features = false }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { version = "^0.2", features = ["vendored"], optional = true }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale"] }
ethereum-types = "0.13.1"
libsecp256k1 = "0.7.0"