[package]
name = "webb-ew-evm"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-proposal-signing-backends = { workspace = true }
webb-event-watcher-traits = { workspace = true }
webb-relayer-store = { workspace = true }
webb-relayer-config = { workspace = true }
webb-relayer-utils = { workspace = true }

async-trait = { workspace = true }
tracing = { workspace = true }
sled = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true }
webb-proposals ={ workspace = true }
ethereum-types = { workspace = true }
