[package]
name = "webb-ew-evm"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-proposal-signing-backends = { workspace = true }
webb-bridge-registry-backends = { workspace = true }
webb-event-watcher-traits = { workspace = true }
webb-relayer-store = { workspace = true }
webb-relayer-config = { workspace = true }
webb-relayer-utils = { workspace = true }


arkworks-native-gadgets = { version = "1.2.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bn254 = { version = "^0.3.0", default-features = true, features = ["curve"] }
ark-ff = { version = "^0.3.0", default-features = true }
ark-std = { version = "^0.3.0", default-features = false }
arkworks-utils = { version = "^1.0.1", default-features = false }
arkworks-setups = { version = "1.2.1", features = ["r1cs"], default-features = false }

# For ark-circom
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = ["derive"] }
circom-proving = { path = "../../crates/circom-proving", default-features = false }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", default-features = false, features = ["parallel"] }
ark-circom = { git = "https://github.com/vacp2p/ark-circom", branch = "wasm", default-features = false, features = ["circom-2"] }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
once_cell = "1.14.0"
cfg-if = "1.0"
wasmer = { version = "2.3.0", default-features = false }
num-traits = "0.2.11"
thiserror = "1.0.0"
color-eyre = "0.6.1"

async-trait = { workspace = true }
tracing = { workspace = true }
sled = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true }
webb-proposals ={ workspace = true }
ethereum-types = { workspace = true }

[features]
default = ["wasmer/sys-default"]

# std = [
#   "codec/std",
#   "frame-support/std",
#   "frame-system/std",
#   "sp-runtime/std",
#   "sp-std/std",
#   "webb-primitives/std",
#   "webb-primitives/hashing",
#   "frame-benchmarking/std",
#   "orml-currencies/std",
#   "orml-tokens/std",
#   "orml-traits/std",
#   "pallet-asset-registry/std",
#   "pallet-balances/std",
#   "pallet-vanchor/std",
#   "pallet-mt/std",
#   "pallet-vanchor-verifier/std",
#   "pallet-token-wrapper/std",
#
# ]
# wasm = ["wasmer/js", "wasmer/std"]
