[package]
name = "webb-ew-evm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-proposal-signing-backends = { workspace = true }
webb-event-watcher-traits = { workspace = true }
webb-relayer-store = { workspace = true }
webb-relayer-config = { workspace = true }
webb-relayer-utils = { workspace = true }


arkworks-native-gadgets = { version = "1.2.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bn254 = { version = "^0.3.0", default-features = true, features = ["curve"] }
ark-ff = { version = "^0.3.0", default-features = true }
ark-std = { version = "^0.3.0", default-features = false }
arkworks-utils = { version = "^1.0.1", default-features = false }
arkworks-setups = { version = "1.2.1", features = ["r1cs"], default-features = false }

async-trait = { workspace = true }
tracing = { workspace = true }
sled = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true }
webb-proposals ={ workspace = true }
ethereum-types = { workspace = true }
typed-builder = { workspace = true }
