[package]
name = "webb-ew-substrate"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-proposal-signing-backends = { workspace = true }
webb-event-watcher-traits = { workspace = true }
webb-relayer-types = { workspace = true }
webb-relayer-store = { workspace = true }
webb-relayer-config = { workspace = true }
webb-relayer-utils = { workspace = true }

async-trait = { workspace = true }
tracing = { workspace = true }
sled = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }
webb-proposals = { workspace = true }
libsecp256k1 = { workspace = true }
