[package]
name = "webb-ew-tangle"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-event-watcher-traits = { workspace = true }
webb-relayer-store = { workspace = true }
webb-relayer-config = { workspace = true }
webb-relayer-utils = { workspace = true }

async-trait = { workspace = true }
tracing = { workspace = true }
sled = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }
webb-proposals = { workspace = true }
ethereum-types = { workspace = true }

