[package]
name = "webb-block-poller"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[[bin]]
name = "webb-block-poller"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
webb-relayer-store = { workspace = true }
webb-relayer-config = { workspace = true }
webb-relayer-context = { workspace = true }
webb-relayer-utils = { workspace = true }
webb-relayer = { workspace = true }

anyhow = { workspace = true, optional = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
backoff = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
paw = { workspace = true, optional = true }
webb = { workspace = true }
ethereum-types = { workspace = true }
dotenv = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["cli"]
cli = [
    "anyhow",
    "paw",
    "webb-relayer-config/cli"
]
integration-tests = ["webb-relayer-config/integration-tests"]
