[package]
name = "webb-light-client-relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[[bin]]
name = "webb-light-client-relayer"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# eth-rpc-client = { package = "eth_rpc_client", git = "https://github.com/webb-tools/pallet-eth2-light-client", branch = "thomas/prepare_eth2_substrate_relayer" }
# eth2-pallet-init = { git = "https://github.com/webb-tools/pallet-eth2-light-client", branch = "thomas/prepare_eth2_substrate_relayer" }
# eth2_to_substrate_relay = { git = "https://github.com/webb-tools/pallet-eth2-light-client", branch = "thomas/prepare_eth2_substrate_relayer" }
# eth-types = { git = "https://github.com/webb-tools/pallet-eth2-light-client", branch = "thomas/prepare_eth2_substrate_relayer" }
eth-types = { path = "../../../pallet-eth2-light-client/crates/eth-types" }
eth_rpc_client = { path = "../../../pallet-eth2-light-client/crates/eth_rpc_client" }
eth2-pallet-init = { path = "../../../pallet-eth2-light-client/crates/eth2-pallet-init" }
eth2_to_substrate_relay = { path = "../../../pallet-eth2-light-client/eth2substrate-block-relay-rs" }
webb-proposal-signing-backends = { path = "../../crates/proposal-signing-backends" }
webb-relayer-types = { path = "../../crates/relayer-types" }
webb-relayer-tx-relay = { path = "../../crates/tx-relay" }
webb-relayer-tx-queue = { path = "../../crates/tx-queue" }
webb-relayer-handlers = { path = "../../crates/relayer-handlers" }
webb-relayer-handler-utils = { path = "../../crates/relayer-handler-utils" }
webb-relayer-store = { path = "../../crates/relayer-store" }
webb-relayer-config = { path = "../../crates/relayer-config", features = ["eth2"] }
webb-relayer-context = { path = "../../crates/relayer-context" }
webb-relayer-utils = { path = "../../crates/relayer-utils"}
webb-relayer = { path = "../webb-relayer" }


anyhow = { version = "^1", optional = true }
async-trait = "^0.1"
tracing = { version = "^0.1", features = ["log"] }
futures = { version = "^0.3", default-features = false }
backoff = { version = "0.4.0", features = ["tokio"] }
tokio = { version = "^1", features = ["full"] }
serde_json = { version = "^1", default-features = false }
paw = { version = "^1.0", optional = true }
webb = { git = "https://github.com/webb-tools/webb-rs" , default-features = false, features = ["evm-runtime"] }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale", "evm", "substrate"] }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { version = "^0.2", features = ["vendored"], optional = true }
ethereum-types = "0.14.0"
dotenv = "0.15.0"
thiserror = "^1"
prometheus = { version = "0.9", features = ["process"] }

[dev-dependencies]
tempfile = "^3.2"
colored = "2"

[features]
default = ["cli"]
cli = [
    "anyhow",
    "paw",
    "webb-relayer-config/cli"
]
integration-tests = ["webb-relayer-config/integration-tests"]
