[package]
name = "webb-relayer"
version = "0.4.1"
authors = ["Webb Developers <drew@webb.tools>"]
edition = "2021"
description = "The Webb Relayer toolkit"
license = "Apache-2.0"
documentation = "https://docs.rs/webb-relayer"
homepage = "https://webb.tools"
repository = "https://github.com/webb-tools/relayer"
exclude = ["tests", "config", ".github", "ci", "assets", "docker"]

[lib]
doctest = false

[[bin]]
name = "webb-relayer"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "in-depth"
path = "../../examples/in_depth.rs"
required-features = ["cli"]

[dependencies]
webb-proposal-signing-backends = { path = "../../crates/proposal-signing-backends" }
webb-relayer-tx-queue = { path = "../../crates/tx-queue" }
webb-relayer-handlers = { path = "../../crates/relayer-handlers" }
webb-relayer-store = { path = "../../crates/relayer-store" }
webb-relayer-config = { path = "../../crates/relayer-config" }
webb-relayer-context = { path = "../../crates/relayer-context" }
webb-relayer-utils = { path = "../../crates/relayer-utils"}
webb-event-watcher-traits = { path = "../../crates/event-watcher-traits"}
webb-ew-dkg = { path = "../../event-watchers/dkg" }
webb-ew-evm = { path = "../../event-watchers/evm" }
webb-ew-substrate = { path = "../../event-watchers/substrate" }

anyhow = { version = "^1", optional = true }
tracing = { version = "^0.1", features = ["log"] }
url = { version = "^2.2", features = ["serde"] }
sled = { version = "^0.34" }
tokio = { version = "^1", features = ["full"] }
warp = { version = "0.3.3", default-features = false, features = ["websocket", "tls"] }
warp-real-ip = "0.2"
config = { version = "0.11", default-features = false, features = ["toml", "json"] }
serde_json = { version = "^1", default-features = false }
paw = { version = "^1.0", optional = true }
webb = { version = "0.5.13", default-features = false }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { version = "^0.2", features = ["vendored"], optional = true }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale"] }
ethereum-types = "0.13.1"
dotenv = "0.15.0"

[dev-dependencies]
tempfile = "^3.2"

[features]
default = ["evm-runtime", "substrate-runtime"]
cli = [ 
    "evm-runtime",
    "substrate-runtime",
    "anyhow",
    "paw",
    "webb-relayer-config/cli"
]
evm-runtime = ["webb/evm-runtime", "webb-proposals/evm"]
substrate-runtime = ["webb/substrate-runtime", "webb-proposals/substrate"]
integration-tests = ["webb-relayer-config/integration-tests"]
