[package]
name = "webb-relayer"
version = "0.5.0-dev"
description = "The Webb Relayer toolkit"
exclude = ["tests", "config", ".github", "ci", "assets", "docker"]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[build-dependencies]
build-data = "0.1.4"

[lib]
doctest = false

[[bin]]
name = "webb-relayer"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "in-depth"
path = "../../examples/in_depth.rs"
required-features = ["cli"]

[dependencies]
webb-proposal-signing-backends = { workspace = true }
webb-bridge-registry-backends = { workspace = true }
webb-relayer-tx-queue = { workspace = true }
webb-relayer-handlers = { workspace = true }
webb-relayer-store = { workspace = true }
webb-relayer-config = { workspace = true }
webb-relayer-context = { workspace = true }
webb-relayer-utils = { workspace = true }
webb-event-watcher-traits = { workspace = true }
webb-ew-dkg = { workspace = true }
webb-ew-evm = { workspace = true }
webb-ew-substrate = { workspace = true }

anyhow = { workspace = true, optional = true }
tracing = { workspace = true }
url = { workspace = true }
sled = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
serde_json = { workspace = true }
paw = { workspace = true, optional = true }
webb = { workspace = true }
sp-core = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }
webb-proposals = { workspace = true }
ethereum-types = { workspace = true }
dotenv = { workspace = true }
axum = { workspace = true }

tower-http = { version = "0.3.5", features = ["cors", "trace"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["evm-runtime", "substrate-runtime"]
cli = ["evm-runtime", "substrate-runtime", "anyhow", "paw", "webb-relayer-config/cli"]
evm-runtime = ["webb/evm-runtime", "webb-proposals/evm"]
substrate-runtime = [
  "webb/substrate-runtime",
  "webb-proposals/substrate",
  "webb-relayer-tx-queue/substrate",
  "sp-core",
  "sp-runtime",
]
integration-tests = ["webb-relayer-config/integration-tests"]
